
Changelog
=========

1.7.3 (unreleased)
------------------

Nothing yet.

1.7.2 (2014-09-23)
------------------

- Add a switch to manually enable the facility information viewlet on a view.
  [href]

1.7.1 (2014-02-05)
------------------

- Hide facility information viewlet on all but the default views.
  [href]

1.7
---

- Upgrade to seantis.dir.base 1.7

1.5.5
-----

- Honor newlines in the item description when rendering

1.5.4
-----

- Limit the reach of directory.css

1.5.3
-----

- Adds basic support for plonetheme.teamraum

1.5.2
-----

- Improves izug basetheme style for facility directory infos

1.5.1
-----

- Show direct Reservation Resource descendants of the Facility Directory
  in the overview map. Before, only resources inside a Facility Item were
  considered.
- Show categories in item detail for any IDirectoryCategorized item, not
  just facility items.

1.5
---

- Upgrade to seantis.dir.base 1.5

1.4.1
-----

- Fixes dexterity type icons

1.4
---

- Initial release (version aligned to seantis.dir.base)