@@ -1,0 +1,152 @@
+/* @group seantis.dir.facility */
+
+/* @group facility directory columns */
+.facilityInfo {
+    float: left;
+    width: 60%;
+    @include boxsizing(border-box);
+}
+
+.facilityOverview {
+    float: right;
+    width: 40%;
+    @include boxsizing(border-box);
+}
+
+@media screen and (max-width: $screen-tablet-landscape) {
+    .facilityInfo, .facilityOverview {
+        float: none;
+        width: 100%;
+    }
+}
+
+.portaltype-seantis-dir-facility-directory #directoryResultList {
+    width: 100%;
+    padding-right: 1em;
+}
+/* @end */
+
+/* @group facility overview */
+.facilityOverview {
+    background-color: $lightgray;
+    padding: 1.5em;
+
+    #directoryResultMap {
+        width: 100%;
+        margin-bottom: 1em;
+    }
+
+    h2 {
+        font-weight: normal;
+    }
+}
+/* @end */
+
+/* @group facility results */
+.portaltype-seantis-dir-facility-directory,
+.portaltype-seantis-dir-facility-item {
+
+    .directoryResult {
+        padding: 1em;
+    }
+
+    #directoryResultList a:hover * {
+        background-color: $lightgray;
+    }
+
+    #directoryResultList a:hover .directoryDescription {
+        color: $text-color;
+    }
+
+    .directoryResult h2 {
+        margin-top: 0;
+    }
+
+    .directoryMarker {
+        top: 1em;
+        right: 1em;
+    }
+
+    .directoryImage {
+        padding: 0;
+        margin: 0 25px 5px 0;
+        float: left;
+    }
+
+    .directoryDescription {
+        float: left;
+        width: 70%;
+    }
+
+    .resourceDescription {
+        color: $darkgray;
+        max-width: 400px;
+        margin-bottom: 1em;
+    }
+    .directoryChildren h2 {
+        margin-top: 1em;
+    }
+    .directoryChildren p {
+        margin-bottom: 1.2em;
+    }
+    .directoryChildren .resourceTitle {
+        font-size: 1.1em;
+        font-weight: bold;
+    }
+    .directoryChildren .resourceDescription {
+        display: inline-block;
+    }
+    .directoryChildren .resourceDescription:hover {
+        text-decoration: none;
+    }
+
+    /* not nice, but seantis.reservation currently needs this */
+    .directoryResult.groupSelection,
+    .resourceItem.groupSelection {
+        @include boxshadow(none !important);
+        background-color: $lightgray !important;
+    }
+
+}
+.portaltype-seantis-dir-facility-item {
+    .directoryResult {
+        padding-bottom: 0;
+    }
+
+    .directoryChildren {
+        margin-left: 1em;
+    }
+}
+/* @end */
+
+/* @group facility info viewlet */
+.multicalendar .directoryResult {
+    display: none;
+}
+
+.singlecalendar,
+.reservation-search {
+    .directoryResult {
+        padding: 1em;
+        margin-bottom: $body-line-height;
+        background-color: $lightgray;
+
+        h2 {
+            font-weight: normal;
+        }
+
+        .directoryImage,
+        .directoryInfo > div {
+            float: left;
+            margin: 0 2em 1em 0;
+            max-width: 50%;
+        }
+    }
+
+    .formTabs {
+        margin-bottom: 1em;
+    }
+}
+/* @group */
+
+/* @end */
