@@ -5,7 +5,8 @@ Changelog
 1.7.3 (unreleased)
 ------------------
 
-Nothing yet.
+- Move facility specific styles from plonetheme.onegov to this package.
+  [lknoepfel]
 
 1.7.2 (2014-09-23)
 ------------------
